[package]
name = "kademlia-dht"
version = "0.1.0"
authors = ["Thomas Min <thomas_min@sfu.ca>", "Naryan Dhillon <naryan_dhillon@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
rand = "0.8.3"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"]}
